# whackac

./: Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  SOURCES.md  build.sh  bundle.sh  dosbox.conf  rust-toolchain.toml
.cargo/: config.toml
.github/workflows/: deploy.yml  pr_check.yml
bundle/: index.html
bundle/.jsdos/: dosbox.conf
raw-assets/: creature-sheet.aseprite  glove.aseprite
resources/: createac.vgm  floppy_16px.data  gameover.vgm  whackac.vgm
src/: audio.rs  create.rs  creature.rs  gameplay.rs  howto.rs  ingame.rs  input.rs  lib.rs  menu.rs
src/gfx/: background.rs  fonts.rs  mod.rs
